# pearsondist

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/source/: api.rst  conf.py  index.rst  intro.rst  usage.rst
script/: joint_mom.py  joint_mom_tr.py  support8-type42.ipynb  support8-type44.ipynb  support8-type49.ipynb  support8.ipynb  utils.py
src/pearsondist/: __init__.py  adjust_lb_ub.py  pdf.py  pearson8.py  pfdecom4.py  rootcatalog4.py  stdmom.py  support8.py
