[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pearsondist"
version = "1.0"
authors = [
  { name="Yan-Feng Wu", email="wuyf@fudan.edu.cn" },
]
description = "Pearson distribution systems"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
keywords = ["Pearson distributions", "moment matching"]
dependencies = [
  "pytest",
  "numpy",
]

[project.urls]
"Homepage" = "https://github.com/xmlongan/pearsondist"
"Bug Tracker" = "https://github.com/xmlongan/pearsondist/issues"